--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="2">
 
-    <android.support.v7.widget.CardView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        app:cardUseCompatPadding="true">
+        android:layout_height="match_parent"
+        android:layout_weight="0.2">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerItem"
+            android:id="@+id/recyclerAnimal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/tvInform"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/text_list_empty"
+            android:textColor="@color/color_black"
+            android:visibility="gone" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="4dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_weight="1.8"
+        android:background="@color/color_light_gray"
+        android:orientation="horizontal"
+        android:padding="4dp">
 
         <Button
             android:id="@+id/btnDeleteAll"
@@ -38,4 +47,4 @@
             android:text="@string/button_add" />
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
