--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/color_ultra_violet</item>
         <item name="colorPrimaryDark">@color/color_ultra_violet</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/color_ultra_violet</item>
     </style>
 
     <style name="Button">
@@ -15,6 +15,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_margin">4dp</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
 </resources>
